objects/TW1_Empresa__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Bairro__c</fullName>
        <description>Bairro onde fica a Empresa</description>
        <label>Bairro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_CEP__c</fullName>
        <description>CEP do Endereço da Empresa</description>
        <label>CEP</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_CNPJ__c</fullName>
        <description>CNPJ Empresa</description>
        <externalId>true</externalId>
        <label>CNPJ</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TW1_Cidade__c</fullName>
        <description>Cidade onde fica a empresa</description>
        <label>Cidade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Complemento__c</fullName>
        <description>Nº e Complemento do endereço da empresa.</description>
        <label>Complemento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_E_mail__c</fullName>
        <description>E-mail da empresa</description>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TW1_Endereco__c</fullName>
        <description>Endereço da Empresa</description>
        <label>Endereço</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Estado__c</fullName>
        <description>Estado onde fica a empresa</description>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TW1_Lista_Estado</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_IM__c</fullName>
        <description>Inscrição Municipal da Empresa</description>
        <label>I.M.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Inscricao_Estadual__c</fullName>
        <description>Inscrição Estadual da Empresa</description>
        <label>I.E.</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone__c</fullName>
        <description>Número de telefone da empresa</description>
        <label>Telefone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_cod_empresa_UAU__c</fullName>
        <description>Código da Empresa no UAU</description>
        <externalId>true</externalId>
        <inlineHelpText>Código da Empresa no UAU</inlineHelpText>
        <label>Código Empresa ERP</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Empresa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_CNPJ__c</columns>
        <columns>TW1_cod_empresa_UAU__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Razão Social</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empresas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TW1_VR_Valida_IM</fullName>
        <active>false</active>
        <errorConditionFormula>REGEX(TW1_IM__c, &quot;(^[A-Z]{20})&quot; )</errorConditionFormula>
        <errorDisplayField>TW1_IM__c</errorDisplayField>
        <errorMessage>Favor digitar somente letras ou números.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidaCNPJ</fullName>
        <active>true</active>
        <errorConditionFormula>IF( LEN( TW1_CNPJ__c ) &lt; 14 , true, IF (AND(REGEX(TW1_CNPJ__c , &quot;[0-9]{1,14}&quot;),TW1_CNPJ__c &lt;&gt; &apos;00000000000000&apos;),OR	(AND	(MOD(( 
( VALUE( MID( TW1_CNPJ__c , 1, 1 ) ) * 6 ) + 
(VALUE( MID( TW1_CNPJ__c , 2, 1 ) ) * 5 ) + 
( VALUE( MID( TW1_CNPJ__c , 3, 1 ) ) * 4 ) + 
( VALUE( MID( TW1_CNPJ__c , 4, 1 ) ) * 3 ) + 
( VALUE( MID( TW1_CNPJ__c , 5, 1 ) ) * 2 ) + 
( VALUE( MID( TW1_CNPJ__c , 6, 1 ) ) * 9 ) + 
( VALUE( MID( TW1_CNPJ__c , 7, 1 ) ) * 8 ) + 
( VALUE( MID( TW1_CNPJ__c , 8, 1 ) ) * 7 ) + 
( VALUE( MID( TW1_CNPJ__c , 9, 1 ) ) * 6 ) + 
( VALUE( MID( TW1_CNPJ__c , 10, 1 ) ) * 5 ) + 
( VALUE( MID( TW1_CNPJ__c , 11, 1 ) ) * 4 ) + 
( VALUE( MID( TW1_CNPJ__c , 12, 1 ) ) * 3 ) + 
( VALUE( MID( TW1_CNPJ__c , 13, 1 ) ) * 2 ) 
), 11 
) &lt;= 1 
, VALUE( MID( TW1_CNPJ__c , 14, 1 ) ) != 0 
), 
AND	(MOD(( 
( VALUE( MID( TW1_CNPJ__c , 1, 1 ) ) * 6 ) + 
( VALUE( MID( TW1_CNPJ__c , 2, 1 ) ) * 5 ) + 
( VALUE( MID( TW1_CNPJ__c , 3, 1 ) ) * 4 ) + 
( VALUE( MID( TW1_CNPJ__c , 4, 1 ) ) * 3 ) + 
( VALUE( MID( TW1_CNPJ__c , 5, 1 ) ) * 2 ) + 
( VALUE( MID( TW1_CNPJ__c , 6, 1 ) ) * 9 ) + 
( VALUE( MID( TW1_CNPJ__c , 7, 1 ) ) * 8 ) + 
( VALUE( MID( TW1_CNPJ__c , 8, 1 ) ) * 7 ) + 
( VALUE( MID( TW1_CNPJ__c , 9, 1 ) ) * 6 ) + 
( VALUE( MID( TW1_CNPJ__c , 10, 1 ) ) * 5 ) + 
( VALUE( MID( TW1_CNPJ__c , 11, 1 ) ) * 4 ) + 
( VALUE( MID( TW1_CNPJ__c , 12, 1 ) ) * 3 ) + 
( VALUE( MID( TW1_CNPJ__c , 13, 1 ) ) * 2 )) 
, 11 ) &gt; 1 
, ( 11 - MOD(( 
( VALUE( MID( TW1_CNPJ__c , 1, 1 ) ) * 6 ) + 
( VALUE( MID( TW1_CNPJ__c , 2, 1 ) ) * 5 ) + 
( VALUE( MID( TW1_CNPJ__c , 3, 1 ) ) * 4 ) + 
( VALUE( MID( TW1_CNPJ__c , 4, 1 ) ) * 3 ) + 
( VALUE( MID( TW1_CNPJ__c , 5, 1 ) ) * 2 ) + 
( VALUE( MID( TW1_CNPJ__c , 6, 1 ) ) * 9 ) + 
( VALUE( MID( TW1_CNPJ__c , 7, 1 ) ) * 8 ) + 
( VALUE( MID( TW1_CNPJ__c , 8, 1 ) ) * 7 ) + 
( VALUE( MID( TW1_CNPJ__c , 9, 1 ) ) * 6 ) + 
( VALUE( MID( TW1_CNPJ__c , 10, 1 ) ) * 5 ) + 
( VALUE( MID( TW1_CNPJ__c , 11, 1 ) ) * 4 ) + 
( VALUE( MID( TW1_CNPJ__c , 12, 1 ) ) * 3 ) + 
( VALUE( MID( TW1_CNPJ__c , 13, 1 ) ) * 2 ) 
) 
, 11 
) ) != VALUE( MID( TW1_CNPJ__c , 14, 1 )) 
) 
),true))</errorConditionFormula>
        <errorDisplayField>TW1_CNPJ__c</errorDisplayField>
        <errorMessage>CNPJ informado incorreto, favor verificar.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidaCodigoEmpresaERP</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
 OR(
  LEN ( TW1_cod_empresa_UAU__c ) = 0,
  REGEX(TW1_cod_empresa_UAU__c , &quot;[0-9]{1,6}&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>TW1_cod_empresa_UAU__c</errorDisplayField>
        <errorMessage>O Código da Empresa poderá conter somente números.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_IE</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(TW1_Inscricao_Estadual__c, &quot;(^[A-Z]{14})&quot; ))</errorConditionFormula>
        <errorDisplayField>TW1_Inscricao_Estadual__c</errorDisplayField>
        <errorMessage>Inscrição Estadual só pode conter letras e números.</errorMessage>
    </validationRules>
</CustomObject>